--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,8 +61,9 @@
         <section class="containers">
             <div class="box1">
                 <picture>
-                    <img src="images/wdd230-large.webp" alt="Temporary Hero Image" srcset="images/wdd230-small.webp 400w, images/wdd230-medium.webp 600w, 
-                        images/wdd230-large.webp 960w,">
+                    <source srcset="images/hero2.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/hero3.jpg" media="(min-width: 960px)">
+                    <img src="images/hero1.jpg" alt="Temporary Hero Image">
                 </picture>
                 <!--<img src="images/MountSaratogaTown.jpg" alt="Photo of Mount Saratoga.">-->
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
@@ -72,14 +73,19 @@
             </div>
             <div class="box2">
                 <picture>
-                    <img src="images/Fair300.jpg" alt="Ferris Wheel">
+                    <source srcset="images/fair1.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/fair3.jpg" media="(min-width: 960px)">
+                    <img src="images/fair1.jpg" alt="Ferris Wheel">
                 </picture>
                 <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
                 <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
-                <img src="images/weather300.jpg" alt="">
+                <picture>
+                    <source srcset="images/weather3.jpg" media="(min-width: 600px)">
+                    <img src="images/weather1.jpg" alt="Misty Mountains">
+                </picture>
                 <!--<img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">-->
                 <h2 class="weather">Weather</h2>
                 <p>33 C<br>
@@ -88,14 +94,21 @@
                     Wind Chill: N/A</P>
             </div>
             <div class="box4">
-                <img src="images/MountainBikeTrails4.jpg" alt="Photo of mountain bike trails.">
+                <picture>
+                    <source srcset="images/bike1.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/bike2.jpg" media="(min-width: 960px)">
+                    <img src="images/bike1.jpg" alt="Mountain bike">
+                </picture>
                 <h2 class="news">News</h2>
                 <p>Five new bike trials have been added to the mountain bike park and will be open to the
                     public starting in July. <a href="#">more info...</a>
                 </p>
             </div>
             <div class="box5">
-                <img src="images/ChamberPic.jpg" alt="State Capital Picture">
+                <picture>
+                    <source srcset="images/join3.jpg" media="(min-width: 960px)">
+                    <img src="images/join2.jpg" alt="State Capital Picture">
+                </picture>
                 <h2 class="join">Join Us</h2>
                 <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
                 <div class="joinbtn2">
@@ -105,7 +118,11 @@
             <div class="box6">
                 <div class="split1">
                     <h2 class="boat">Dinner Cruise</h2>
-                    <img src="images/BoatTours2.jpg" alt="">
+                    <picture>
+                        <source srcset="images/boat1.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/boat2.jpg" media="(min-width: 960px)">
+                        <img src="images/boat1.jpg" alt="Dinner Cruise Boat">
+                    </picture>
                     <p><b>The Lake View Boat Tours Company</b> has just added two new cruise boats that
                         offer luxury dining with a full kitchen staff for each boat.
                     </p>
@@ -115,9 +132,13 @@
                     </p>
                 </div>
                 <div class="split2">
-                    <h2 class="bed">Bed & Breakfast</h2>
-                    <img src="images/BedandBreakfast.jpg" alt="">
-                    <p><b>The Hallstat Bed and Breakfast</b> renovation is complete! This beautiful, historic,
+                    <h2 class="bed">Hotel</h2>
+                    <picture>
+                        <source srcset="images/hotel2.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/hotel3.jpg" media="(min-width: 960px)">
+                        <img src="images/hotel1.jpg" alt="Hallstat Hotel">
+                    </picture>
+                    <p><b>The Hallstat Hotel</b> renovation is complete! This beautiful, historic,
                         Austrian style home is more charming than ever. Book your stay now!
                     </p>
                     <p>
@@ -127,7 +148,11 @@
                 </div>
                 <div class="split3">
                     <h2 class="cafe">Austrian Cafe</h2>
-                    <img src="images/AustrianResturant.jpg" alt="">
+                    <picture>
+                        <source srcset="images/cafe2.jpg" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/cafe3.jpg" media="(min-width: 960px)">
+                        <img src="images/cafe1.jpg" alt="Vlaamsche Cafe">
+                    </picture>
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
                         Austrian style cafe has a beautiful outdoor seating area perfect to celebrate
                         any occasion.
