--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <picture>
-            <img src="images/mount_saratoga__6-1.png" alt="Mount Saratoga Logo">
+            <img src="images/logo1.webp" alt="Mount Saratoga Logo">
         </picture>
 
         <h1>Mount Saratoga <span id="cc"><br>Chamber of Commerce</span></h1>
@@ -172,7 +172,7 @@
         <section class="foot1">
             <div>
                 <picture id="logo2">
-                    <img src="images/mount_saratoga__6-1.png" alt="Mount Saratoga Logo">
+                    <img src="images/logo1.webp" alt="Mount Saratoga Logo">
                 </picture>
             </div>
             <div class="address">
