--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page for Mount Saratoga Chamber of Commerce</title>
-    <meta name="description" content="Homepage for the Mount Saratoga Chamber of Commerce. 
+    <title>Mount Saratoga Chamber of Commerce</title>
+    <meta name="description" content="Mount Saratoga Chamber of Commerce. 
     This website helps business owners network together, helps people find reliable business,
     helps new members of the community learn more about the business in their area." />
 
