--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <picture>
-            <img src="images/logo1.webp" alt="Mount Saratoga Logo">
+            <img src="images/MountSaratoga-1.webp" alt="Mount Saratoga Logo">
         </picture>
 
         <h1>Mount Saratoga <span id="cc"><br>Chamber of Commerce</span></h1>
@@ -61,9 +61,9 @@
         <section class="containers">
             <div class="box1">
                 <picture>
-                    <source srcset="images/hero2.webp" media="(min-width: 640px) and (max-width: 959px)">
-                    <source srcset="images/hero3.webp" media="(min-width: 960px)">
-                    <img src="images/hero1.webp" alt="Temporary Hero Image">
+                    <source srcset="images/hero02.webp" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/hero03.webp" media="(min-width: 960px)">
+                    <img src="images/hero01.webp" alt="Temporary Hero Image">
                 </picture>
                 <!--<img src="images/MountSaratogaTown.jpg" alt="Photo of Mount Saratoga.">-->
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
@@ -73,9 +73,9 @@
             </div>
             <div class="box2">
                 <picture>
-                    <source srcset="images/fair1.webp" media="(min-width: 640px) and (max-width: 959px)">
-                    <source srcset="images/fair3.webp" media="(min-width: 960px)">
-                    <img src="images/fair1.webp" alt="Ferris Wheel">
+                    <source srcset="images/fair01.webp" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/fair03.webp" media="(min-width: 960px)">
+                    <img src="images/fair01.webp" alt="Ferris Wheel">
                 </picture>
                 <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
@@ -83,22 +83,22 @@
             </div>
             <div class="box3">
                 <picture>
-                    <source srcset="images/weather3.webp" media="(min-width: 600px)">
-                    <img src="images/weather1.webp" alt="Misty Mountains">
+                    <source srcset="images/weather03.webp" media="(min-width: 600px)">
+                    <img src="images/weather01.webp" alt="Misty Mountains">
                 </picture>
                 <!--<img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">-->
                 <h2 class="weather">Weather</h2>
                 <div class="temp-box">
-                    <p><span class="current-temp">56</span>&deg;F</p>
+                    <p><span class="current-temp">46</span>&deg;F</p>
                     <p>Wind Speed: <span class="wind-speed">5</span> mph</p>
-                    <p>Wind Chill: <span class="windchill">N/A</span></p>
+                    <p>Wind Chill: <span class="windchill"></span></p>
                 </div>
             </div>
             <div class="box4">
                 <picture>
-                    <source srcset="images/bike1.webp" media="(min-width: 640px) and (max-width: 959px)">
-                    <source srcset="images/bike2.webp" media="(min-width: 960px)">
-                    <img src="images/bike1.webp" alt="Mountain bike">
+                    <source srcset="images/bike01.webp" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/bike02.webp" media="(min-width: 960px)">
+                    <img src="images/bike01.webp" alt="Mountain bike">
                 </picture>
                 <h2 class="news">News</h2>
                 <p>Five new bike trials have been added to the mountain bike park and will be open to the
@@ -107,8 +107,8 @@
             </div>
             <div class="box5">
                 <picture>
-                    <source srcset="images/join3.webp" media="(min-width: 960px)">
-                    <img src="images/join2.webp" alt="State Capital Picture">
+                    <source srcset="images/join03.webp" media="(min-width: 960px)">
+                    <img src="images/join02.webp" alt="State Capital Picture">
                 </picture>
                 <h2 class="join">Join Us</h2>
                 <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
@@ -120,9 +120,9 @@
                 <div class="split1">
                     <h2 class="boat">Dinner Cruise</h2>
                     <picture>
-                        <source srcset="images/boat1.webp" media="(min-width: 640px) and (max-width: 959px)">
-                        <source srcset="images/boat2.webp" media="(min-width: 960px)">
-                        <img src="images/boat1.webp" alt="Dinner Cruise Boat">
+                        <source srcset="images/boat01.webp" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/boat02.webp" media="(min-width: 960px)">
+                        <img src="images/boat01.webp" alt="Dinner Cruise Boat">
                     </picture>
                     <p><b>The Lake View Boat Tours Company</b> has just added two new cruise boats that
                         offer luxury dining with a full kitchen staff for each boat.
@@ -135,9 +135,9 @@
                 <div class="split2">
                     <h2 class="bed">Hotel</h2>
                     <picture>
-                        <source srcset="images/hotel2.webp" media="(min-width: 640px) and (max-width: 959px)">
-                        <source srcset="images/hotel3.webp" media="(min-width: 960px)">
-                        <img src="images/hotel1.webp" alt="Hallstat Hotel">
+                        <source srcset="images/hotel02.webp" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/hotel03.webp" media="(min-width: 960px)">
+                        <img src="images/hotel01.webp" alt="Hallstat Hotel">
                     </picture>
                     <p><b>The Hallstat Hotel</b> renovation is complete! This beautiful, historic,
                         Austrian style home is more charming than ever. Book your stay now!
@@ -150,9 +150,9 @@
                 <div class="split3">
                     <h2 class="cafe">Austrian Cafe</h2>
                     <picture>
-                        <source srcset="images/cafe2.webp" media="(min-width: 640px) and (max-width: 959px)">
-                        <source srcset="images/cafe3.webp" media="(min-width: 960px)">
-                        <img src="images/cafe1.webp" alt="Vlaamsche Cafe">
+                        <source srcset="images/cafe02.webp" media="(min-width: 640px) and (max-width: 959px)">
+                        <source srcset="images/cafe03.webp" media="(min-width: 960px)">
+                        <img src="images/cafe01.webp" alt="Vlaamsche Cafe">
                     </picture>
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
                         Austrian style cafe has a beautiful outdoor seating area perfect to celebrate
@@ -173,13 +173,13 @@
         <section class="foot1">
             <div>
                 <picture id="logo2">
-                    <img src="images/logo1.webp" alt="Mount Saratoga Logo">
+                    <img src="images/MountSaratoga-1.webp" alt="Mount Saratoga Logo">
                 </picture>
             </div>
             <div class="address">
                 <h3><b>Mount Saratoga Chamber of Commerce</b></h3>
                 <p>
-                    N Mount Saratoga Blvd<br>
+                    N. Mount Saratoga Blvd<br>
                     Mount Saratoga, Utah 38459
                 </p>
             </div>
@@ -199,6 +199,7 @@
         </p>
     </footer>
     <script src="js/scripts.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 
 </html>
