--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -6,13 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progressive Loading (Images)</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <main>
-        <h1>Progressive Loading Images</h1>
-        <picture></picture>
+        <div>
+            <h1>Progressive Loading Images</h1>
+        </div>
+        <div class="pics">
+            <picture>
+                <img class="p1" src="images/church-by-water.jpg" alt="Church by water">
+            </picture>
+            <picture>
+                <img class="p2" src="images/church-steeple.jpg" alt="Church steeple">
+            </picture>
+            <picture>
+                <img class="p3" src="images/houses-on-mountain.jpg" alt="Houses on mountain">
+            </picture>
+            <picture>
+                <img class="p4" src="images/lake-church.jpg" alt="Church by lake">
+            </picture>
+            <picture>
+                <img class="p5" src="images/village-street.jpg" alt="Village streets">
+            </picture>
+            <picture>
+                <img class="p6" src="images/village.jpg" alt="Village">
+            </picture>
+        </div>
     </main>
+    <script scr="js.script.js">
+    </script>
 </body>
 
 </html>
