--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     Chamber Home Page Continued</a></li>
             <li>Lesson 06: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
                     Responsive Design</a></li>
-            <li>Lesson 07: <a href="">Title</a></li>
+            <li>Lesson 07: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
+                    The Discover Page - Image Section</a></li>
             <li>Lesson 08: <a href="">Title</a></li>
             <li>Lesson 09: <a href="">Title</a></li>
             <li>Lesson 10: <a href="">Title</a></li>
