--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -5,38 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
     <title>Progressive Loading (Images)</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lazyloadstyle.css">
 </head>
 
 <body>
-    <main>
-        <div>
-            <h1>Progressive Loading Images</h1>
-        </div>
-        <div class="pics">
-            <picture>
-                <img class="p1" src="images/church-by-water.jpg" alt="Church by water">
-            </picture>
-            <picture>
-                <img class="p2" src="images/church-steeple.jpg" alt="Church steeple">
-            </picture>
-            <picture>
-                <img class="p3" src="images/houses-on-mountain.jpg" alt="Houses on mountain">
-            </picture>
-            <picture>
-                <img class="p4" src="images/lake-church.jpg" alt="Church by lake">
-            </picture>
-            <picture>
-                <img class="p5" src="images/village-street.jpg" alt="Village streets">
-            </picture>
-            <picture>
-                <img class="p6" src="images/village.jpg" alt="Village">
-            </picture>
-        </div>
+    <header>
+        <h1>Progressive Loading Images</h1>
+    </header>
+    <main class="pics">
+        <img src="images/placeholder.jpg" data-src="/lesson7/images/church-by-water.jpg" alt="Church by water">
+        <img src="images/placeholder.jpg" data-src="images/church-steeple.jpg" alt="Church steeple">
+        <img src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg" alt="Houses on mountain">
+        <img src="images/placeholder.jpg" data-src="images/lake-church.jpg" alt="Church by lake">
+        <img src="images/placeholder.jpg" data-src="images/village-street.jpg" alt="Village streets">
+        <img src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
     </main>
-    <script scr="js.script.js">
-    </script>
+    <script scr="js/lazyloadscript.js"></script>
 </body>
 
 </html>
