--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
     <title>Progressive Loading (Images)</title>
-    <link rel="stylesheet" href="css/lazyloadstyle.css">
+    <link rel="stylesheet" href="css/lazyload.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <img src="images/placeholder.jpg" data-src="images/village-street.jpg" alt="Village streets">
         <img src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
     </main>
-    <script scr="js/lazyloadscript.js"></script>
+    <script scr="js/lazyload.js"></script>
 </body>
 
 </html>
