--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
     <title>Progressive Loading (Images)</title>
     <link rel="stylesheet" href="css/lazyload.css">
+
 </head>
 
 <body>
@@ -20,9 +21,9 @@
         <img src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg" alt="Houses on mountain">
         <img src="images/placeholder.jpg" data-src="images/lake-church.jpg" alt="Church by lake">
         <img src="images/placeholder.jpg" data-src="images/village-street.jpg" alt="Village streets">
-        <img src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
+        <img class="pic6" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
     </main>
-    <script scr="js/lazyload.js"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 
 </html>
