--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -16,7 +16,7 @@
         <h1>Progressive Loading Images</h1>
     </header>
     <main class="pics">
-        <img src="images/placeholder.jpg" data-src="/lesson7/images/church-by-water.jpg" alt="Church by water">
+        <img src="images/placeholder.jpg" data-src="images/church-by-water.jpg" alt="Church by water">
         <img src="images/placeholder.jpg" data-src="images/church-steeple.jpg" alt="Church steeple">
         <img src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg" alt="Houses on mountain">
         <img src="images/placeholder.jpg" data-src="images/lake-church.jpg" alt="Church by lake">
