--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
                     Website Planning Document</a></li>
             <li>Lesson 04: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
                     Mount Saratoga Chamber of Commerce Homepage</a></li>
-            <li>Lesson 05: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
-                    Chamber Home Page Continued</a></li>
+            <li>Lesson 05: <a href="https://mjhaymond.github.io/wdd230/bomtop25/index.html">DOM Manipulation </a>|
+                <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
+                    Chamber Home Page Continued</a>
+            </li>
             <li>Lesson 06: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
-                    Responsive Design</a></li>
-            <li>Lesson 07: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
-                    The Discover Page - Image Section</a></li>
+                    Responsive Design</a>
+            </li>
+            <li>Lesson 07: <a href="https://mjhaymond.github.io/wdd230/lesson7/lazyload.html">Progressive Loading of
+                    Images </a>|
+                <a href="https://mjhaymond.github.io/wdd230/chamber/discover.html">
+                    The Discover Page</a>
+            </li>
             <li>Lesson 08: <a href="">Title</a></li>
             <li>Lesson 09: <a href="">Title</a></li>
             <li>Lesson 10: <a href="">Title</a></li>
