--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
     <title>Progressive Loading (Images)</title>
+    <meta name="description" content="Progressive loading of images activity." />
     <link rel="stylesheet" href="css/lazyload.css">
 
 </head>
