--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,91 +51,162 @@
             <span id="currentDate"></span>
         </p>
     </header>
+
     <main>
         <div class="discover-title">
             <h2 class="stats">Statistics</h2>
             <p>Resident population and its related trend, balance of nature and migratory balance, birth rate,
                 death rate, growth rate and migration rate in Municipality of Mount Saratoga.</p>
         </div>
+
         <section class="discover">
             <div class="discover1">
-                <h2>Population 2022</h2>
-                <img src="images/ForeignersIncidence.png" alt="">
-                <p>Territorial extension of Municipality of MOUNT SARATOGA and
-                    related population density, population per gender and number
-                    of households, average age and incidence of foreigners.</p>
+                <div>
+                    <h2>Population 2022</h2>
+                    <img src="images/ForeignersIncidence.png" alt="">
+                    <p>Territorial extension of Municipality of MOUNT SARATOGA and
+                        related population density, population per gender and number
+                        of households, average age and incidence of foreigners.</p>
+                </div>
             </div>
             <div class="discover2">
-                <h2>Age Classes</h2>
-                <img src="images/AgeClasses.png" alt="">
-                <p> Average age of males 46.07 years old.<br>
-                    Average age of females is 49.98 years old.</p>
+                <div>
+                    <h2>Age Classes</h2>
+                    <img src="images/AgeClasses.png" alt="">
+                    <p> Average age of males 46.07 years old.<br>
+                        Average age of females is 49.98 years old.</p>
+                </div>
             </div>
             <div class="discover3">
-                <h2>Demographic Balance</h2>
-                <img src="images/DemographicBalance.png" alt="">
-                <p>Inhabitants on 1th Jan.- 754<br>
-                    Births- 2<br>
-                    Deaths- 13<br>
-                    Registered- 19<br>
-                    Deleted- 8<br>
-                    Migration- +11<br>
-                    Inhabitants on 31th Dec.- 754</p>
+                <div>
+                    <h2>Demographic Balance</h2>
+                    <img src="images/DemographicBalance.png" alt="">
+                    <p>Inhabitants on 1th Jan.- 754<br>
+                        Births- 2<br>
+                        Deaths- 13<br>
+                        Registered- 19<br>
+                        Deleted- 8<br>
+                        Migration- +11<br>
+                        Inhabitants on 31th Dec.- 754</p>
+                </div>
             </div>
             <div class="discover4">
-                <h2>Inhabitants Trend</h2>
-                <img src="images/InhabitantsTrend.png" alt="">
-                <p>
-                    <b>2021 Year Inhabitants on Previous Year</b><br>
-                    2018- 774 Inhabitants<br>
-                    2019- 778 +0.52%<br>
-                    2020- 754 -3.08%<br>
-                    2021- 754 +0.00%<br>
-                    Average annual variation (2016/2019): -0.87<br>
-                    Average annual variation (2018/2019): +0.00
-                </p>
+                <div>
+                    <h2>Inhabitants Trend</h2>
+                    <img src="images/InhabitantsTrend.png" alt="">
+                    <p>
+                        <b>2021 Year Inhabitants on Previous Year</b><br>
+                        2018- 774 Inhabitants<br>
+                        2019- 778 +0.52%<br>
+                        2020- 754 -3.08%<br>
+                        2021- 754 +0.00%<br>
+                        Average annual variation (2016/2019): -0.87<br>
+                        Average annual variation (2018/2019): +0.00
+                    </p>
+                </div>
             </div>
             <div class="discover5">
-                <h2>Population By Age</h2>
-                <img src="images/PopulationbyAge.png" alt="">
-                <p>Age classes per gender and related impact, average age and
-                    old-age index in Municipality of MOUNT SARATOGA.</p>
+                <div>
+                    <h2>Population By Age</h2>
+                    <img src="images/PopulationbyAge.png" alt="">
+                    <p>Age classes per gender and related impact, average age and
+                        old-age index in Municipality of MOUNT SARATOGA.</p>
+                </div>
             </div>
             <div class="discover6">
-                <h2>Synthesis Data</h2>
-                <p>Total number of foreigners living in MOUNT SARATOGA is 132
-                    people = 100% of the foreign population.<br><br>
-                    There are 74 male foreigners = 55.06% of the foreign population,
-                    and 9.81% of the total population in Mount Saratoga.<br><br>
-                    There are 58 female foreigners = 43.94% of the foreign population,
-                    and 7.69% of the total population in Mount Saratoga.
-                </p>
+                <div>
+                    <h2>Synthesis Data</h2>
+                    <p>Total number of foreigners living in MOUNT SARATOGA is 132
+                        people = 100% of the foreign population.<br><br>
+                        There are 74 male foreigners = 55.06% of the foreign population,
+                        and 9.81% of the total population in Mount Saratoga.<br><br>
+                        There are 58 female foreigners = 43.94% of the foreign population,
+                        and 7.69% of the total population in Mount Saratoga.
+                    </p>
+                </div>
             </div>
             <div class="discover7">
                 <div>
-                    <img src="images/placeholder.jpg" data-src="images/church-by-water.jpg" alt="Church by water">
+                    <h2>Church</h2>
+                    <div>
+                        <img class="pic1" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
+                            alt="Church by water">
+                    </div>
                     <p>The historic Lakeside church build in 1812.</p>
                 </div>
                 <div>
-                    <img src="images/placeholder.jpg" data-src="images/church-steeple.jpg" alt="Church steeple">
+                    <h2>Inn</h2>
+                    <div>
+                        <img class="pic2" src="images/placeholder.jpg" data-src="images/church-steeple.jpg"
+                            alt="Church steeple">
+                    </div>
                     <p>The Lakeside church steeple and the Saratoga Inn.</p>
                 </div>
                 <div>
-                    <img src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg" alt="Houses on mountain">
+                    <h2>Homes</h2>
+                    <div>
+                        <img class="pic3" src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg"
+                            alt="Houses on mountain">
+                    </div>
                     <p>Homes of the Mount Saratoga community climb the mountainside overlooking the lake.</p>
                 </div>
                 <div>
-                    <img src="images/placeholder.jpg" data-src="images/village-street.jpg" alt="Village streets">
+                    <h2>Shops</h2>
+                    <div>
+                        <img class="pic4" src="images/placeholder.jpg" data-src="images/village-street.jpg"
+                            alt="Village streets">
+                    </div>
                     <p>Local shops line the cobblestone streets of the village.</p>
                 </div>
                 <div>
-                    <img src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
+                    <h2>Village</h2>
+                    <div>
+                        <img class="pic5" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
+                    </div>
                     <p>The fountain of truth, located in the village center square of Mount Saratoga.</p>
+                </div>
+                <div class="pic6div">
+                    <h2>Historic</h2>
+                    <div>
+                        <img class="pic5" src="images/placeholder.jpg" data-src="images/lake-church.jpg"
+                            alt="Church by lake">
+                    </div>
+                    <p>The historic Lakeside church and Mount Saratoga Village.</p>
                 </div>
             </div>
 
         </section>
     </main>
+    <!-- FOOTER HERE -->
+    <footer>
+        <section class="foot1">
+            <div>
+                <picture id="logo2">
+                    <img src="images/MountSaratoga-1.webp" alt="Mount Saratoga Logo">
+                </picture>
+            </div>
+            <div class="address">
+                <h3><b>Mount Saratoga Chamber of Commerce</b></h3>
+                <p>
+                    N. Mount Saratoga Blvd<br>
+                    Mount Saratoga, Utah 38459
+                </p>
+            </div>
+            <div class="urlsite">
+                <p>
+                    www.mountsaratogacc.com<br>
+                    801-566-4346
+                </p>
+                <a href="https://www.google.com/maps/">
+                    <i class="material-icons">&#xe567;</i>Location Map</a>
+            </div>
+        </section>
+        <p id="lastline">
+            &copy;<span id="currentYear"></span> Mount Saratoga Chamber |
+            Merry Haymond | WDD 230 Project |
+            Last Updated: <span id="updatedDate"></span>
+        </p>
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 
