--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,9 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster+Two&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css" />
-    <link rel="stylesheet" href="css/large.css" />
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 
 </head>
 
@@ -63,7 +63,7 @@
             <div class="discover1">
                 <div>
                     <h2>Population 2022</h2>
-                    <img src="images/ForeignersIncidence.png" alt="">
+                    <img src="images/ForeignersIncidence.png" alt="Froeigners Incidence Graph">
                     <p>Territorial extension of Municipality of MOUNT SARATOGA and
                         related population density, population per gender and number
                         of households, average age and incidence of foreigners.</p>
@@ -72,7 +72,7 @@
             <div class="discover2">
                 <div>
                     <h2>Age Classes</h2>
-                    <img src="images/AgeClasses.png" alt="">
+                    <img src="images/AgeClasses.png" alt="Age Classes Graph">
                     <p> Average age of males 46.07 years old.<br>
                         Average age of females is 49.98 years old.</p>
                 </div>
@@ -80,7 +80,7 @@
             <div class="discover3">
                 <div>
                     <h2>Demographic Balance</h2>
-                    <img src="images/DemographicBalance.png" alt="">
+                    <img src="images/DemographicBalance.png" alt="Demographic Balance Graph">
                     <p>Inhabitants on 1th Jan.- 754<br>
                         Births- 2<br>
                         Deaths- 13<br>
@@ -93,7 +93,7 @@
             <div class="discover4">
                 <div>
                     <h2>Inhabitants Trend</h2>
-                    <img src="images/InhabitantsTrend.png" alt="">
+                    <img src="images/InhabitantsTrend.png" alt="Inhabitants Trend Graph">
                     <p>
                         <b>2021 Year Inhabitants on Previous Year</b><br>
                         2018- 774 Inhabitants<br>
@@ -108,7 +108,7 @@
             <div class="discover5">
                 <div>
                     <h2>Population By Age</h2>
-                    <img src="images/PopulationbyAge.png" alt="">
+                    <img src="images/PopulationbyAge.png" alt="Population By Age Graph">
                     <p>Age classes per gender and related impact, average age and
                         old-age index in Municipality of MOUNT SARATOGA.</p>
                 </div>
@@ -126,53 +126,60 @@
                 </div>
             </div>
             <div class="discover7">
-                <div>
+                <div class="border">
                     <h2>Church</h2>
-                    <div>
-                        <img class="pic1" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
                             alt="Church by water">
                     </div>
                     <p>The historic Lakeside church build in 1812.</p>
                 </div>
-                <div>
+                <div class="border">
                     <h2>Inn</h2>
-                    <div>
-                        <img class="pic2" src="images/placeholder.jpg" data-src="images/church-steeple.jpg"
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/church-steeple.jpg"
                             alt="Church steeple">
                     </div>
                     <p>The Lakeside church steeple and the Saratoga Inn.</p>
                 </div>
-                <div>
+                <div class="border">
                     <h2>Homes</h2>
-                    <div>
-                        <img class="pic3" src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg"
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg"
                             alt="Houses on mountain">
                     </div>
                     <p>Homes of the Mount Saratoga community climb the mountainside overlooking the lake.</p>
                 </div>
-                <div>
+                <div class="border">
                     <h2>Shops</h2>
-                    <div>
-                        <img class="pic4" src="images/placeholder.jpg" data-src="images/village-street.jpg"
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/village-street.jpg"
                             alt="Village streets">
                     </div>
                     <p>Local shops line the cobblestone streets of the village.</p>
                 </div>
-                <div>
+                <div class="border">
                     <h2>Village</h2>
-                    <div>
-                        <img class="pic5" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
                     </div>
                     <p>The fountain of truth, located in the village center square of Mount Saratoga.</p>
                 </div>
-                <div class="pic6div">
+                <div class="border">
                     <h2>Historic</h2>
-                    <div>
-                        <img class="pic5" src="images/placeholder.jpg" data-src="images/lake-church.jpg"
+                    <div class="placeholder">
+                        <img class="pics" src="images/placeholder.jpg" data-src="images/lake-church.jpg"
                             alt="Church by lake">
                     </div>
                     <p>The historic Lakeside church and Mount Saratoga Village.</p>
                 </div>
+                <div class="border bottom">
+                    <h2>Local Storage</h2>
+                    <p><span class="label">Number of Visits to Page:</span><span class="visits"></span></p>
+                    <hr>
+                    <p>Timestamp: <span class="today"></span></p>
+                </div>
+            </div>
             </div>
 
         </section>
